# traffix

./: LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  issue_scraper.py  pyproject.toml  requirements-worker.txt  requirements.txt
.github/ISSUE_TEMPLATE/: 01_event_game_release.yaml  02_event_game_update.yaml  99_generic_issue.yaml
.github/workflows/: scrape_issues.yml
datastore/: event_game_releases.yml  event_game_updates.yml
dockerfiles/: Dockerfile  Dockerfile.notifier  Dockerfile.worker
traffix/: config.py  dependencies.py  fake_data.py  logic.py  main.py  menu.py
traffix/models/: events.py
traffix/ui/static/css/: app.min.css  traffix.css  vendor.min.css
traffix/ui/static/js/: app.min.js
traffix/ui/static/js/demo/: dashboard.demo.js
traffix/ui/templates/fragments/: activity_log.html  generic_pagination.html  generic_pagination_old.html  top_5_upcoming_events.html  traffic_analytics.html
traffix/ui/templates/layouts/: base_new.html  navbar.html  sidebar.html
traffix/ui/templates/pages/: game_releases.html  game_releases_new.html  game_updates.html  game_updates_new.html  index.html  index_new.html
traffix/ui/templates/partial/: footer.html  header.html  scroll-top-btn.html  sidebar.html  theme-panel.html  top-nav.html
traffix/views/: all.py
traffix/worker/: run.py  slack_notifier.py
